--- a/WebApp/weather-cam-web-app/index.html
+++ b/WebApp/weather-cam-web-app/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      window.addEventListener("load", () => {});
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -10,6 +13,59 @@
 
   <body>
     <div id="app"></div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<style>
+  .center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-25%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  @keyframes loading {
+    0% {
+      height: 50px;
+      top: 0px;
+    }
+
+    50% {
+      height: 70px;
+      top: -10px;
+    }
+
+    100% {
+      height: 50px;
+      top: 0px;
+    }
+  }
+
+  #loading {
+    position: fixed;
+    background-color: #555555;
+    height: 50px;
+    width: 15px;
+    animation-name: loading;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+  }
+
+  #loading.loading1 {
+    left: -25px;
+    animation-delay: 0.2s;
+  }
+
+  #loading.loading2 {
+    left: 0px;
+    animation-delay: 0.4s;
+  }
+
+  #loading.loading3 {
+    left: 25px;
+    animation-delay: 0.6s;
+  }
+</style>
