--- a/WebApp/weather-cam-web-app/index.html
+++ b/WebApp/weather-cam-web-app/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="" />
     <title>Weather Station</title>
   </head>
 
